--- a/Final_BaseProject/GXX_Project.ioc
+++ b/Final_BaseProject/GXX_Project.ioc
@@ -84,7 +84,7 @@ PE7.Signal=S_DATAIN2DFSDM1
 PE9.Locked=true
 PE9.Signal=S_CKOUTDFSDM1
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -101,6 +101,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=GXX_Project.ioc
